--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
+    "icons": "^1.0.0",
     "next": "14.2.18",
     "next-sanity": "^9.8.31",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "sanity": "^3.68.3",
     "styled-components": "^6.1.14"
   },
